--- a/core/templates/core/about-us.html
+++ b/core/templates/core/about-us.html
@@ -54,7 +54,7 @@
             <!-- Content -->
             <div class="relative z-10">
                 <h2 class="text-2xl font-bold mb-4">Are You Interested In Our Real Estate</h2>
-                {% component "button" label="Find out More" type="tertiary" %} {% endcomponent %}
+                {% component "button" label="Find out More" href="{% url 'core:real_estate' %}" type="tertiary" %} {% endcomponent %}
             </div>
         </section>
 
@@ -67,7 +67,7 @@
             <!-- Content -->
             <div class="relative z-10">
                 <h2 class="text-2xl font-bold mb-4">Interested in Travels or Study Abroad?</h2>
-                {% component "button" label="Find out More" type="tertiary" %} {% endcomponent %}
+                {% component "button" label="Find out More" href="{% url 'core:home'%}" type="tertiary" %} {% endcomponent %}
             </div>
 
         </section>
