--- a/adminv2/templates/adminv2/cms/partials/partners/update-partner.html
+++ b/adminv2/templates/adminv2/cms/partials/partners/update-partner.html
@@ -36,7 +36,7 @@
             </div>
 
         <div class="flex gap-x-2 justify-end md:flex-row">
-            <button class="btn primary-btn w-max" type="submit">Add Partner</button>
+            <button class="btn primary-btn w-max" type="submit">Update Partner</button>
         </div>
 
     </div>
