add breadcrumb to admin page

--- a/adminv2/templates/adminv2/blog/index.html
+++ b/adminv2/templates/adminv2/blog/index.html
@@ -7,7 +7,8 @@
 
 {% endblock %}
 
-{% block section_title %} Blog {% endblock %}
+{% block section_title %} Blog Articles {% endblock %}
+{% block section_caption%} Manage and publish news, updates, or articles. {% endblock %}
 
 {% block content %}
 
