--- a/adminv2/templates/adminv2/cms/index.html
+++ b/adminv2/templates/adminv2/cms/index.html
@@ -4,6 +4,7 @@
 {% block title %}{% endblock %}
 
 {% block section_title %}Content Management{% endblock %}
+{% block section_caption%} Edit and update static content across the website, including About Us, FAQs, Testimonials, and Partner Logos. {% endblock %}
 
 {% block content %} 
     
