--- a/adminv2/templates/adminv2/listing/listing.html
+++ b/adminv2/templates/adminv2/listing/listing.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block title %}{% endblock %}
+
 {% block section_title %} Listings {% endblock %}
+{% block section_caption %} Manage and review all property listings in one place. {% endblock%}
 
 {% block content %} 
 
