--- a/adminv2/templates/adminv2/messaging/index.html
+++ b/adminv2/templates/adminv2/messaging/index.html
@@ -3,7 +3,8 @@
 
 {% block title %}{% endblock %}
 
-{% block section_title %} Contact Messages {% endblock %}
+{% block section_title %} Inbox {% endblock %}
+{% block section_caption%} View and respond to messages submitted through the contact form. {% endblock %}
 
 {% block content %} 
 
