--- a/adminv2/templates/adminv2/users/users.html
+++ b/adminv2/templates/adminv2/users/users.html
@@ -4,6 +4,7 @@
 {% block title %}{% endblock %}
 
 {% block section_title %} Users {% endblock %}
+{% block section_caption%} View and manage all registered users and their roles. {% endblock %}
 
 {% block content %} 
 
