--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -22,7 +22,7 @@
     {% block style %}{% endblock %}
 </head>
 <body class="font-base text-gray-900">
-    <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-200 lg:p-4">
+    <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-100 lg:p-4">
 
         <!-- Nav bar -->
         <nav x-cloak :class="isOpen ? 'absolute' : 'hidden'" class="w-2/3 md:max-w-56 lg:w-full lg:flex h-screen bg-white flex flex-col gap-5 p-4 lg:sticky top-0 lg:col-span-1 z-[90]">
@@ -90,17 +90,37 @@
         </nav>
 
         <!-- Main content -->
-        <div class="flex flex-col gap-7 lg:col-span-3 pt-2 px-4 min-h-[100vh]">
+        <div class="flex flex-col gap-4 lg:col-span-3 pt-2 px-4 min-h-[100vh]">
             <header class="flex justify-between sticky">
                 <div>
-                    <h1 class="text-3xl font-bold">Admin Panel</h1>
-                    <h2 class="text-2xl font-medium">
+                    {% if breadcrumbs %}
+                        <nav class="mb-4 text-sm font-medium" aria-label="Breadcrumb">
+                            <ol class="flex items-center gap-1">
+                                {% for crumb in breadcrumbs %}
+                                    <li class="flex items-center gap-1">
+                                    {% if crumb.url and not forloop.last %}
+                                        <a href="{{ crumb.url }}" class="text-gray-600 hover:underline">{{ crumb.title }}</a>
+                                    {% else %}
+                                        <span class="text-gray-900 font-bold">{{ crumb.title }}</span>
+                                    {% endif %}
+                                    {% if not forloop.last %}
+                                        <span class="mx-2 text-gray-500">/</span>
+                                    {% endif %}
+                                    </li>
+                                {% endfor %}
+                            </ol>
+                        </nav>
+                    {% endif %}
+
+                    {% comment %} <h1 class="text-3xl font-bold">Admin Panel</h1> {% endcomment %}
+                    <h2 class="text-2xl font-bold">
                         {% block section_title %} {% endblock %}
                     </h2>
+                    <p>{% block section_caption %} Check the sales, value and bounce rate by country. {% endblock %}</p>
                 </div>
 
                 <!-- Mobile Menu Toggle -->
-                <button @click="isOpen = !isOpen" type="button" class="inline-flex items-center p-2 text-sm 
+                <button @click="isOpen = !isOpen" type="button" class="h-min inline-flex items-center p-2 text-sm 
                 text-gray-500 rounded-lg ml-auto lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
                 <span class="sr-only">Open main menu</span>
                 <!-- <i class="fa fa-hamburger w-6 h-6" :class="isOpen ? 'fa-close' : 'fa fa-hamburger'"></i> -->
