--- a/adminv2/templates/adminv2/blog/create-blog.html
+++ b/adminv2/templates/adminv2/blog/create-blog.html
@@ -7,10 +7,11 @@
     {{ form.media }}
 {% endblock %}
 
-{% block section_title %} Blog {% endblock %}
+{% block section_title %} Create Blog Article {% endblock %}
+{% block section_caption%} Write blog content {% endblock %}
 
 {% block content %} 
-    <form action="{% url 'adminv2:create-blog' %}" onsubmit="submitBlogForm(event)" class="w-full max-w-2xl self-center lg:self-start">
+    <form action="{% url 'adminv2:create-blog' %}" onsubmit="submitBlogForm(event)" class="bg-white rounded-xl shadow px-6 py-4 w-full max-w-2xl self-center lg:self-start">
         <div class="flex flex-col gap-3 lg:gap-4">
             <h3 class="text-xl font-bold">Create Blog Article</h3>
             <div>
