--- a/adminv2/templates/adminv2/blog/update-blog.html
+++ b/adminv2/templates/adminv2/blog/update-blog.html
@@ -7,11 +7,12 @@
     {{ form.media }}
 {% endblock %}
 
-{% block section_title %}Blog{% endblock %}
+{% block section_title %} Update Blog Article {% endblock %}
+{% block section_caption%} Update blog content {% endblock %}
 
 {% block content %} 
     {% if article %}
-        <form action="{% url 'adminv2:update-blog' article.id %}" onsubmit="updateBlog(event)" class="w-full max-w-2xl self-center lg:self-start">
+        <form action="{% url 'adminv2:update-blog' article.id %}" onsubmit="updateBlog(event)" class="bg-white rounded-xl shadow px-6 py-4 w-full max-w-2xl self-center lg:self-start">
             
             <div class="flex flex-col gap-3 lg:gap-4">
                 <h3 class="text-xl font-bold">Update Blog Article</h3>
