--- a/adminv2/templates/adminv2/listing/add.html
+++ b/adminv2/templates/adminv2/listing/add.html
@@ -1,12 +1,13 @@
 {% extends 'adminv2/base.html'%}
 {% load static %}
 
-{% block title %}Create New Listings{% endblock %}
-{% block section_title %} Listings {% endblock %}
+{% block title %}Create New Listing{% endblock %}
+{% block section_title %} Create New Listing {% endblock %}
+{% block section_caption%} Create a new property listing with all required details. {% endblock %}
 
 {% block content %} 
 
-    <form method="post" enctype="multipart/form-data" class="max-w-2xl self-center lg:self-start" onsubmit="submitForm(event)">
+    <form method="post" enctype="multipart/form-data" class="bg-white rounded-xl shadow px-6 py-4 max-w-2xl self-center lg:self-start" onsubmit="submitForm(event)">
         {% csrf_token %}        
         <div class="flex flex-col gap-3 lg:gap-4">
             <h3 class="text-xl font-bold">Create New Listing</h3>
