--- a/adminv2/templates/adminv2/listing/edit.html
+++ b/adminv2/templates/adminv2/listing/edit.html
@@ -2,14 +2,15 @@
 {% load static %}
 
 {% block title %}Update Listing - {{ listing.title }}{% endblock %}
-{% block section_title %} Listings {% endblock %}
+{% block section_title %}Update Listing {% endblock %}
+{% block section_caption%} Update information for an existing property listing. {% endblock %}
 
 {% block content %} 
 
-    <form method="post" enctype="multipart/form-data" class="max-w-2xl self-center lg:self-start" onsubmit="submitForm(event)">
+    <form method="post" enctype="multipart/form-data" class="bg-white rounded-xl shadow px-6 py-4 max-w-2xl self-center lg:self-start" onsubmit="submitForm(event)">
         {% csrf_token %}        
         <div class="flex flex-col gap-3 lg:gap-4">
-            <h3 class="text-xl font-bold">Update Listing</h3>
+            <h3 class="text-xl font-bold">Update Listing - <span class="font-normal text-lg italic">{{listing.title}}</span> </h3>
             <div>
                 <label for="id_title" class="label-primary">Title</label>
                 <input class="input-primary" type="text" name="title" maxlength="40" required id="id_title" value="{{listing.title}}">
