--- a/core/templates/core/about-us.html
+++ b/core/templates/core/about-us.html
@@ -9,69 +9,94 @@
 {% block og_image %} {{ request.scheme }}://{{ request.get_host }}{% static 'images/staff.jpg' %} {% endblock %}
 
 {% block content %}
-    <section class="responsive-padding pt-12">
-        <h1 class="text-4xl font-bold text-center mb-4">Know Everything About Us</h1>
-        <div class="flex flex-col lg:flex-row justify-center items-center gap-4 lg:gap-12">
-            <div class="text-lg order-3 ">
-                <p>
-                    At <strong>Eaglespoint Horizon Limited</strong>, we believe in making dreams a reality. Whether it's finding the perfect home, embarking on a seamless travel experience, or pursuing international education, our mission is to provide exceptional services tailored to your aspirations.
-                </p>
-                <p class="mt-4">
-                    With over <strong>8 years</strong> of industry expertise and a proven track record of serving <strong>200+ satisfied clients</strong>, we have positioned ourselves as a trusted name in Real Estate, Travel, and Education Consulting. Our commitment to integrity, excellence, and personalized service ensures that every client journey is smooth, rewarding, and transformative.
-                </p>
-            </div>
-            <img src="{% static 'images/staff.jpg' %}" class="block rounded-2xl w-full max-w-[480px] lg:order-5">
-        </div>   
-    </section>
+    <main class="flex flex-col gap-12">
+        <!-- <section class="responsive-padding pt-12">
+            <h1 class="text-4xl font-bold text-center mb-4">Know Everything About Us</h1>
+            <div class="flex flex-col lg:flex-row justify-center items-center gap-4 lg:gap-12">
+                <div class="text-lg order-3 ">
+                    <p>
+                        At <strong>Eaglespoint Horizon Limited</strong>, we believe in making dreams a reality. Whether it's finding the perfect home, embarking on a seamless travel experience, or pursuing international education, our mission is to provide exceptional services tailored to your aspirations.
+                    </p>
+                    <p class="mt-4">
+                        With over <strong>8 years</strong> of industry expertise and a proven track record of serving <strong>200+ satisfied clients</strong>, we have positioned ourselves as a trusted name in Real Estate, Travel, and Education Consulting. Our commitment to integrity, excellence, and personalized service ensures that every client journey is smooth, rewarding, and transformative.
+                    </p>
+                </div>
+                <img src="{% static 'images/staff.jpg' %}" class="block rounded-2xl w-full max-w-[480px] lg:order-5">
+            </div>   
+        </section> -->
 
-    {% if team_members %}
-        <section class="py-8 responsive-padding mt-12 mb-12">
-            <h1 class="text-4xl font-bold text-center mb-4">Meet Our Team</h1>
-            <div class="flex gap-3 justify-start items-center flex-nowrap overflow-x-auto">
-                {% for member in team_members %}
-                    <figure class="relative h-[408px] w-full min-w-52 rounded-lg overflow-hidden">
-                        <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
-                        <img src="{{ member.photo.url }}" width="320px" class="h-full w-full object-cover">
-                        <figcaption class="absolute w-full bottom-4 *:block text-white text-center">
-                            <span class="uppercase font-bold">{{ member.name }}</span>
-                            <span>{{ member.position }}</span>
-                        </figcaption> 
-                    </figure>
-                {% endfor %}
+        <section class="relative responsive-padding justify-center mt-12 py-4 bg-center bg-cover"
+        style="background-image: url({% static 'images/white-pattern.jpg' %});" >
+            <!-- <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent z-0"></div> -->
+            <h1 class="text-4xl underline font-bold font-cursive mb-4 text-center">A word from our CEO</h1>
+            <div class="flex md:gap-10 justify-center">
+                <div class="hidden md:block">
+                    <svg width="54" height="54" viewBox="0 0 54 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.99961 3.59998C7.56744 3.59998 6.19393 4.1689 5.18123 5.1816C4.16854 6.1943 3.59961 7.56781 3.59961 8.99998V36C3.59961 39.8191 5.11675 43.4818 7.81727 46.1823C10.5178 48.8828 14.1805 50.4 17.9996 50.4V46.8C15.1353 46.8 12.3882 45.6621 10.3629 43.6367C8.33746 41.6113 7.19961 38.8643 7.19961 36V25.2H19.7996C21.2318 25.2 22.6053 24.631 23.618 23.6184C24.6307 22.6057 25.1996 21.2321 25.1996 19.8V8.99998C25.1996 7.56781 24.6307 6.1943 23.618 5.1816C22.6053 4.1689 21.2318 3.59998 19.7996 3.59998H8.99961ZM34.1996 3.59998C32.7674 3.59998 31.3939 4.1689 30.3812 5.1816C29.3685 6.1943 28.7996 7.56781 28.7996 8.99998V36C28.7996 39.8191 30.3167 43.4818 33.0173 46.1823C35.7178 48.8828 39.3805 50.4 43.1996 50.4V46.8C40.3353 46.8 37.5882 45.6621 35.5629 43.6367C33.5375 41.6113 32.3996 38.8643 32.3996 36V25.2H44.9996C46.4318 25.2 47.8053 24.631 48.818 23.6184C49.8307 22.6057 50.3996 21.2321 50.3996 19.8V8.99998C50.3996 7.56781 49.8307 6.1943 48.818 5.1816C47.8053 4.1689 46.4318 3.59998 44.9996 3.59998H34.1996Z" fill="#364153"/>
+                    </svg>
+                </div>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/cpP-fCo8Dn4?si=yX41qCUdTm7rQT88" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <div class="rotate-180 hidden md:block">
+                    <svg width="54" height="54" viewBox="0 0 54 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.99961 3.59998C7.56744 3.59998 6.19393 4.1689 5.18123 5.1816C4.16854 6.1943 3.59961 7.56781 3.59961 8.99998V36C3.59961 39.8191 5.11675 43.4818 7.81727 46.1823C10.5178 48.8828 14.1805 50.4 17.9996 50.4V46.8C15.1353 46.8 12.3882 45.6621 10.3629 43.6367C8.33746 41.6113 7.19961 38.8643 7.19961 36V25.2H19.7996C21.2318 25.2 22.6053 24.631 23.618 23.6184C24.6307 22.6057 25.1996 21.2321 25.1996 19.8V8.99998C25.1996 7.56781 24.6307 6.1943 23.618 5.1816C22.6053 4.1689 21.2318 3.59998 19.7996 3.59998H8.99961ZM34.1996 3.59998C32.7674 3.59998 31.3939 4.1689 30.3812 5.1816C29.3685 6.1943 28.7996 7.56781 28.7996 8.99998V36C28.7996 39.8191 30.3167 43.4818 33.0173 46.1823C35.7178 48.8828 39.3805 50.4 43.1996 50.4V46.8C40.3353 46.8 37.5882 45.6621 35.5629 43.6367C33.5375 41.6113 32.3996 38.8643 32.3996 36V25.2H44.9996C46.4318 25.2 47.8053 24.631 48.818 23.6184C49.8307 22.6057 50.3996 21.2321 50.3996 19.8V8.99998C50.3996 7.56781 49.8307 6.1943 48.818 5.1816C47.8053 4.1689 46.4318 3.59998 44.9996 3.59998H34.1996Z" fill="#364153"/>
+                    </svg>
+                </div>
+
             </div>
         </section>
-    {% endif %}
 
-    {% component "stats_partner" %} {% endcomponent %}
+        {% if team_members %}
+            <section class="py-8 responsive-padding">
+                <h1 class="text-4xl font-bold text-center mb-4">Meet Our Team</h1>
+                <div class="flex gap-3 justify-start items-center flex-nowrap overflow-x-auto">
+                    {% for member in team_members %}
+                        <figure class="relative h-[408px] w-full min-w-52 rounded-lg overflow-hidden">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
+                            <img src="{{ member.photo.url }}" width="320px" class="h-full w-full object-cover">
+                            <figcaption class="absolute w-full bottom-4 *:block text-white text-center">
+                                <span class="uppercase font-bold">{{ member.name }}</span>
+                                <span>{{ member.position }}</span>
+                            </figcaption> 
+                        </figure>
+                    {% endfor %}
+                </div>
+            </section>
+        {% endif %}
 
-    <section class="flex flex-col gap-6 md:flex-row md:gap-0 w-full mt-12">
-        <section class="w-full relative bg-cover bg-center text-white py-4 lg:py-10 responsive-padding" 
-        style="background-image: url('{% static 'images/house-duplex.jpg' %}');">
+        {% component "stats_partner" %} {% endcomponent %}
+
+        <section class="flex flex-col gap-6 md:flex-row md:gap-0 w-full">
+            <section class="w-full relative bg-cover bg-center text-white py-4 lg:py-10 responsive-padding" 
+            style="background-image: url('{% static 'images/house-duplex.jpg' %}');">
+            
+                <!-- Overlay -->
+                <div class="absolute inset-0 bg-blue-600/50"></div> 
+
+                <!-- Content -->
+                <div class="relative z-10">
+                    <h2 class="text-2xl font-bold mb-4">Are You Interested In Our Real Estate</h2>
+                    {% component "button" label="Find out More" href="{% url 'core:real_estate' %}" type="tertiary" %} {% endcomponent %}
+                </div>
+            </section>
+
+            <section class="w-full relative bg-cover bg-center text-white py-4 lg:py-10 responsive-padding" 
+        style="background-image: url('{% static 'images/airplane.jpg' %}');">
         
-            <!-- Overlay -->
-            <div class="absolute inset-0 bg-blue-600/50"></div> 
+                <!-- Overlay -->
+                <div class="absolute inset-0 bg-red-500/70"></div> 
 
-            <!-- Content -->
-            <div class="relative z-10">
-                <h2 class="text-2xl font-bold mb-4">Are You Interested In Our Real Estate</h2>
-                {% component "button" label="Find out More" href="{% url 'core:real_estate' %}" type="tertiary" %} {% endcomponent %}
-            </div>
+                <!-- Content -->
+                <div class="relative z-10">
+                    <h2 class="text-2xl font-bold mb-4">Interested in Travels or Study Abroad?</h2>
+                    {% component "button" label="Find out More" href="{% url 'core:home'%}" type="tertiary" %} {% endcomponent %}
+                </div>
+
+            </section>
         </section>
 
-        <section class="w-full relative bg-cover bg-center text-white py-4 lg:py-10 responsive-padding" 
-    style="background-image: url('{% static 'images/airplane.jpg' %}');">
+    </main>
     
-            <!-- Overlay -->
-            <div class="absolute inset-0 bg-red-500/70"></div> 
-
-            <!-- Content -->
-            <div class="relative z-10">
-                <h2 class="text-2xl font-bold mb-4">Interested in Travels or Study Abroad?</h2>
-                {% component "button" label="Find out More" href="{% url 'core:home'%}" type="tertiary" %} {% endcomponent %}
-            </div>
-
-        </section>
-    </section>
-
     
 {% endblock %}
